implement add to favourites API
