# src/api/openapi.yaml
@@ -142,6 +142,28 @@ paths:
                 properties:
                   message:
                     type: string
+  /movies/{id}/favourites:
+      patch:
+        tags:
+          - Movie
+        summary: Add Movie to Favourites.
+        description: Add Movie to Favourites.
+        operationId: addMovieToFavourites
+        x-eov-operation-handler: movies
+        parameters:
+          - in: path
+            name: id
+            required: true
+            schema:
+              type: string
+              format: uuid
+        responses:
+          "200":
+            description: Adding Movie to Favourites
+            content:
+              application/json:
+                schema:
+                  $ref: '#/components/schemas/GetMoviesResponse'
 components:
   schemas:
     GetMoviesResponse:
